--- a/examples/hello_world/CMakeLists.txt
+++ b/examples/hello_world/CMakeLists.txt
@@ -8,7 +8,7 @@ find_package(ChokoEngine REQUIRED)
 if (MSVC)
 	add_definitions(-DPLATFORM_WIN -DWIN32)
 elseif (APPLE)
-	add_definitions(-DPLATFORM_OSX -DGL_SILENCE_DEPRECATION -DCL_SILENCE_DEPRECATION)
+	add_definitions(-DPLATFORM_MAC -DGL_SILENCE_DEPRECATION -DCL_SILENCE_DEPRECATION)
 elseif (UNIX)
 	add_definitions(-DPLATFORM_LNX)
 else()
