--- a/src/scene/CMakeLists.txt
+++ b/src/scene/CMakeLists.txt
@@ -2,6 +2,8 @@ set(DIR src/scene)
 
 set(SOURCES
 	${SOURCES}
+	${DIR}/component.cpp
+	${DIR}/object_base.cpp
 	${DIR}/scene.cpp
 	${DIR}/sceneobject.cpp
 	PARENT_SCOPE
