add transform, mat4 classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,6 +98,7 @@ link_directories(${LINK_DIRS})
 add_subdirectory("src")
 add_subdirectory("src/3rdparty")
 add_subdirectory("src/asset")
+add_subdirectory("src/backend/rend")
 add_subdirectory("src/core")
 add_subdirectory("src/ext")
 add_subdirectory("src/scene")
