--- a/src/types/CMakeLists.txt
+++ b/src/types/CMakeLists.txt
@@ -3,6 +3,7 @@ set(DIR src/types)
 set(SOURCES
 	${SOURCES}
 	${DIR}/color.cpp
+	${DIR}/mat4x4.cpp
 	${DIR}/quat.cpp
 	${DIR}/rect.cpp
 	PARENT_SCOPE
