--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,6 +101,7 @@ add_subdirectory("src/asset")
 add_subdirectory("src/backend/rend")
 add_subdirectory("src/core")
 add_subdirectory("src/ext")
+add_subdirectory("src/parsers")
 add_subdirectory("src/scene")
 add_subdirectory("src/scene/comp")
 add_subdirectory("src/types")
