vertex object type, editor hierarchy class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,6 +131,7 @@ set(SOURCES )
 add_subdirectory("editor")
 add_subdirectory("editor/res")
 add_subdirectory("editor/ui")
+add_subdirectory("editor/ui/windows")
 
 add_executable(ChokoEditor ${SOURCES} ${HEADERS})
 
