color operators tmp

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -5,6 +5,7 @@ set(SOURCES
 	${DIR}/debug.cpp
 	${DIR}/display.cpp
 	${DIR}/input.cpp
+	${DIR}/interactive_ui.cpp
 	${DIR}/io.cpp
 	${DIR}/mvp.cpp
 	${DIR}/ui.cpp
