--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,6 +100,7 @@ add_subdirectory("src/3rdparty")
 add_subdirectory("src/asset")
 add_subdirectory("src/backend/rend")
 add_subdirectory("src/core")
+add_subdirectory("src/core/types")
 add_subdirectory("src/ext")
 add_subdirectory("src/parsers")
 add_subdirectory("src/scene")
