--- a/src/asset/CMakeLists.txt
+++ b/src/asset/CMakeLists.txt
@@ -3,6 +3,7 @@ set(DIR src/asset)
 set(SOURCES
 	${SOURCES}
 	${DIR}/font.cpp
+	${DIR}/rendertarget.cpp
 	${DIR}/shader.cpp
 	${DIR}/texture.cpp
 	${DIR}/texture_internal.cpp
