bigger window, add inspector

--- a/editor/ui/windows/CMakeLists.txt
+++ b/editor/ui/windows/CMakeLists.txt
@@ -3,6 +3,7 @@ set(DIR editor/ui/windows)
 set(SOURCES
 	${SOURCES}
 	${DIR}/ew_hierarchy.cpp
+	${DIR}/ew_inspector.cpp
 	${DIR}/ew_sceneview.cpp
 	PARENT_SCOPE
 )
