vec types, mesh rend

--- a/src/types/CMakeLists.txt
+++ b/src/types/CMakeLists.txt
@@ -7,6 +7,9 @@ set(SOURCES
 	${DIR}/quat.cpp
 	${DIR}/rect.cpp
 	${DIR}/texturebuffer.cpp
+	${DIR}/vec2.cpp
+	${DIR}/vec3.cpp
+	${DIR}/vec4.cpp
 	${DIR}/vertexbuffer.cpp
 	${DIR}/vertexobject.cpp
 	PARENT_SCOPE
