--- a/src/types/CMakeLists.txt
+++ b/src/types/CMakeLists.txt
@@ -3,6 +3,8 @@ set(DIR src/types)
 set(SOURCES
 	${SOURCES}
 	${DIR}/color.cpp
+	${DIR}/depth_texture.cpp
+	${DIR}/framebuffer.cpp
 	${DIR}/mat4x4.cpp
 	${DIR}/quat.cpp
 	${DIR}/rect.cpp
