--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -3,6 +3,7 @@ set(DIR src/utils)
 set(SOURCES
 	${SOURCES}
 	${DIR}/math.cpp
+	${DIR}/procedural_mesh.cpp
 	${DIR}/random.cpp
 	${DIR}/unique_caller.cpp
 	PARENT_SCOPE
