--- a/src/scene/comp/CMakeLists.txt
+++ b/src/scene/comp/CMakeLists.txt
@@ -3,6 +3,7 @@ set(DIR src/scene/comp)
 set(SOURCES
 	${SOURCES}
 	${DIR}/camera.cpp
+	${DIR}/light.cpp
 	${DIR}/mesh_renderer.cpp
 	PARENT_SCOPE
 )
