--- a/editor/ui/CMakeLists.txt
+++ b/editor/ui/CMakeLists.txt
@@ -3,6 +3,7 @@ set(DIR editor/ui)
 set(SOURCES
 	${SOURCES}
 	${DIR}/colors.cpp
+	${DIR}/dropdown_menu.cpp
 	${DIR}/window.cpp
 	${DIR}/windowmanager.cpp
 	PARENT_SCOPE
