--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,6 +134,7 @@ target_link_libraries(ChokoEngine ${LIBS})
 set(SOURCES )
 
 add_subdirectory("editor")
+add_subdirectory("editor/asset")
 add_subdirectory("editor/hooks")
 add_subdirectory("editor/res")
 add_subdirectory("editor/scene")
