--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -5,6 +5,7 @@ set(SOURCES
 	${DIR}/math.cpp
 	${DIR}/procedural_mesh.cpp
 	${DIR}/random.cpp
+	${DIR}/subprocess.cpp
 	${DIR}/unique_caller.cpp
 	PARENT_SCOPE
 )
