--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SOURCES
 	${DIR}/procedural_mesh.cpp
 	${DIR}/random.cpp
 	${DIR}/subprocess.cpp
+	${DIR}/transform_feedback.cpp
 	${DIR}/unique_caller.cpp
 	PARENT_SCOPE
 )
