--- a/editor/ui/windows/sceneview/CMakeLists.txt
+++ b/editor/ui/windows/sceneview/CMakeLists.txt
@@ -2,6 +2,7 @@ set(DIR editor/ui/windows/sceneview)
 
 set(SOURCES
 	${SOURCES}
+	${DIR}/callback_capture.cpp
 	${DIR}/draw_comp_list.cpp
 	${DIR}/rig.cpp
 	PARENT_SCOPE
