--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,6 +100,8 @@ link_directories(${LINK_DIRS})
 add_subdirectory("src")
 add_subdirectory("src/3rdparty")
 add_subdirectory("src/asset")
+add_subdirectory("src/asset/animclip")
+add_subdirectory("src/asset/animgraph")
 add_subdirectory("src/asset/shader")
 add_subdirectory("src/backend/rend")
 add_subdirectory("src/core")
