--- a/src/asset/CMakeLists.txt
+++ b/src/asset/CMakeLists.txt
@@ -2,6 +2,8 @@ set(DIR src/asset)
 
 set(SOURCES
 	${SOURCES}
+	${DIR}/animclip.cpp
+	${DIR}/animgraph.cpp
 	${DIR}/armature.cpp
 	${DIR}/armature_bone.cpp
 	${DIR}/background.cpp
