--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,6 +139,7 @@ set(SOURCES )
 add_subdirectory("editor")
 add_subdirectory("editor/asset")
 add_subdirectory("editor/asset/parsers/comp")
+add_subdirectory("editor/ext")
 add_subdirectory("editor/hooks")
 add_subdirectory("editor/res")
 add_subdirectory("editor/scene")
@@ -147,6 +148,7 @@ add_subdirectory("editor/serial/config")
 add_subdirectory("editor/ui")
 add_subdirectory("editor/ui/windows")
 add_subdirectory("editor/ui/windows/inspector")
+add_subdirectory("editor/ui/windows/inspector/comp")
 add_subdirectory("editor/ui/windows/ops")
 add_subdirectory("editor/ui/windows/sceneview")
 
