ui stencil scroll

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,6 +156,7 @@ add_subdirectory("editor/scene")
 add_subdirectory("editor/serial")
 add_subdirectory("editor/serial/config")
 add_subdirectory("editor/ui")
+add_subdirectory("editor/ui/layout")
 add_subdirectory("editor/ui/windows")
 add_subdirectory("editor/ui/windows/inspector")
 add_subdirectory("editor/ui/windows/inspector/comp")
