--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,6 +149,7 @@ set(SOURCES )
 add_subdirectory("editor")
 add_subdirectory("editor/asset")
 add_subdirectory("editor/asset/parsers/comp")
+add_subdirectory("editor/exporters")
 add_subdirectory("editor/ext")
 add_subdirectory("editor/hooks")
 add_subdirectory("editor/res")
