--- a/editor/ui/windows/CMakeLists.txt
+++ b/editor/ui/windows/CMakeLists.txt
@@ -2,6 +2,7 @@ set(DIR editor/ui/windows)
 
 set(SOURCES
 	${SOURCES}
+	${DIR}/ew_browser.cpp
 	${DIR}/ew_hierarchy.cpp
 	${DIR}/ew_inspector.cpp
 	${DIR}/ew_sceneview.cpp
