--- a/editor/ui/windows/inspector/comp/CMakeLists.txt
+++ b/editor/ui/windows/inspector/comp/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SOURCES
 	${SOURCES}
 	${DIR}/animator.cpp
 	${DIR}/camera.cpp
+	${DIR}/light.cpp
 	${DIR}/meshrenderer.cpp
 	${DIR}/rig.cpp
 	${DIR}/script.cpp
