--- a/editor/ui/windows/sceneview/CMakeLists.txt
+++ b/editor/ui/windows/sceneview/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SOURCES
 	${SOURCES}
 	${DIR}/callback_capture.cpp
 	${DIR}/draw_comp_list.cpp
+	${DIR}/light.cpp
 	${DIR}/rig.cpp
 	PARENT_SCOPE
 )
