--- a/src/scene/comp/CMakeLists.txt
+++ b/src/scene/comp/CMakeLists.txt
@@ -5,6 +5,7 @@ set(SOURCES
 	${DIR}/animator.cpp
 	${DIR}/camera.cpp
 	${DIR}/light.cpp
+	${DIR}/light_probe.cpp
 	${DIR}/mesh_renderer.cpp
 	${DIR}/rig.cpp
 	${DIR}/script.cpp
