render probe, apply test

--- a/src/backend/rend/CMakeLists.txt
+++ b/src/backend/rend/CMakeLists.txt
@@ -4,5 +4,6 @@ set(SOURCES
     ${SOURCES}
     ${DIR}/renderer.cpp
     ${DIR}/renderer_lights.cpp
+    ${DIR}/renderer_probes.cpp
     PARENT_SCOPE
 )
