--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,6 +148,9 @@ set(SOURCES )
 
 add_subdirectory("editor")
 add_subdirectory("editor/asset")
+add_subdirectory("editor/asset/ext")
+add_subdirectory("editor/asset/ext/vshader/inputs")
+add_subdirectory("editor/asset/ext/vshader/outputs")
 add_subdirectory("editor/asset/parsers/comp")
 add_subdirectory("editor/exporters")
 add_subdirectory("editor/ext")
