--- a/editor/ui/windows/CMakeLists.txt
+++ b/editor/ui/windows/CMakeLists.txt
@@ -6,5 +6,6 @@ set(SOURCES
 	${DIR}/ew_hierarchy.cpp
 	${DIR}/ew_inspector.cpp
 	${DIR}/ew_sceneview.cpp
+	${DIR}/ew_shadereditor.cpp
 	PARENT_SCOPE
 )
