--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,6 +114,7 @@ add_subdirectory("src/asset/animclip")
 add_subdirectory("src/asset/animgraph")
 add_subdirectory("src/asset/shader")
 add_subdirectory("src/backend/rend")
+add_subdirectory("src/backend/rend/gi")
 add_subdirectory("src/core")
 add_subdirectory("src/core/types")
 add_subdirectory("src/ext")
