--- a/src/asset/shader/CMakeLists.txt
+++ b/src/asset/shader/CMakeLists.txt
@@ -1,7 +1,3 @@
-set(DIR src/asset/shader)
-
-set(SOURCES
-	${SOURCES}
-	${DIR}/shader_variable.cpp
-	PARENT_SCOPE
+target_sources(ChokoEngine PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/shader_variable.cpp
 )
