--- a/src/backend/rend/CMakeLists.txt
+++ b/src/backend/rend/CMakeLists.txt
@@ -1,9 +1,7 @@
-set(DIR src/backend/rend)
-
-set(SOURCES
-    ${SOURCES}
-    ${DIR}/renderer.cpp
-    ${DIR}/renderer_lights.cpp
-    ${DIR}/renderer_probes.cpp
-    PARENT_SCOPE
+target_sources(ChokoEngine PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/renderer.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/renderer_lights.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/renderer_probes.cpp
 )
+
+add_subdirectory("GI")
