--- a/src/core/types/CMakeLists.txt
+++ b/src/core/types/CMakeLists.txt
@@ -1,8 +1,4 @@
-set(DIR src/core/types)
-
-set(SOURCES
-	${SOURCES}
-	${DIR}/ui_button_style.cpp
-	${DIR}/ui_textfield_style.cpp
-	PARENT_SCOPE
+target_sources(ChokoEngine PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/ui_button_style.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/ui_textfield_style.cpp
 )
