--- a/src/parsers/CMakeLists.txt
+++ b/src/parsers/CMakeLists.txt
@@ -1,8 +1,4 @@
-set(DIR src/parsers)
-
-set(SOURCES
-	${SOURCES}
-	${DIR}/json.cpp
-	${DIR}/mesh.cpp
-	PARENT_SCOPE
+target_sources(ChokoEngine PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/json.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/mesh.cpp
 )
