--- a/src/scene/CMakeLists.txt
+++ b/src/scene/CMakeLists.txt
@@ -1,11 +1,9 @@
-set(DIR src/scene)
-
-set(SOURCES
-	${SOURCES}
-	${DIR}/component.cpp
-	${DIR}/object_base.cpp
-	${DIR}/scene.cpp
-	${DIR}/sceneobject.cpp
-	${DIR}/transform.cpp
-	PARENT_SCOPE
+target_sources(ChokoEngine PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/component.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/object_base.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/scene.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/sceneobject.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/transform.cpp
 )
+
+add_subdirectory("comp")
