--- a/src/scene/comp/CMakeLists.txt
+++ b/src/scene/comp/CMakeLists.txt
@@ -1,13 +1,11 @@
-set(DIR src/scene/comp)
-
-set(SOURCES
-	${SOURCES}
-	${DIR}/animator.cpp
-	${DIR}/camera.cpp
-	${DIR}/light.cpp
-	${DIR}/light_probe.cpp
-	${DIR}/mesh_renderer.cpp
-	${DIR}/rig.cpp
-	${DIR}/script.cpp
-	PARENT_SCOPE
+target_sources(ChokoEngine PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/animator.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/camera.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/light.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/light_probe.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/mesh_renderer.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/rig.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/script.cpp
 )
+
+add_subdirectory("mesh")
