--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -1,12 +1,8 @@
-set(DIR src/utils)
-
-set(SOURCES
-	${SOURCES}
-	${DIR}/math.cpp
-	${DIR}/procedural_mesh.cpp
-	${DIR}/random.cpp
-	${DIR}/subprocess.cpp
-	${DIR}/transform_feedback.cpp
-	${DIR}/unique_caller.cpp
-	PARENT_SCOPE
+target_sources(ChokoEngine PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/math.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/procedural_mesh.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/random.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/subprocess.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/transform_feedback.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/unique_caller.cpp
 )
