--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -1,9 +1,7 @@
-set(DIR editor)
-
-set(SOURCES
-	${SOURCES}
-	${DIR}/chokoeditor.cpp
-	${DIR}/editor_paths.cpp
-	${DIR}/main.cpp
-	PARENT_SCOPE
+target_sources(ChokoEditor PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/chokoeditor.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/editor_paths.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
 )
+
+add_subdirectory(scripting)
