asset picker frame 1

--- a/editor/scripting/CMakeLists.txt
+++ b/editor/scripting/CMakeLists.txt
@@ -1,3 +1,6 @@
 target_sources(ChokoEditor PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/script_val.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/scripting.cpp
 )
+
+add_subdirectory(comp)
