--- a/editor/ui/overlay/CMakeLists.txt
+++ b/editor/ui/overlay/CMakeLists.txt
@@ -3,6 +3,7 @@ set(DIR editor/ui/overlay)
 set(SOURCES
 	${SOURCES}
 	${DIR}/eo_dropdown.cpp
+	${DIR}/eo_colorpicker.cpp
 	${DIR}/eo_selectref.cpp
 	PARENT_SCOPE
 )
