--- a/editor/asset/ext/vshader/outputs/CMakeLists.txt
+++ b/editor/asset/ext/vshader/outputs/CMakeLists.txt
@@ -1,7 +1,3 @@
-set(DIR editor/asset/ext/vshader/outputs)
-
-set(SOURCES
-	${SOURCES}
-	${DIR}/surface.cpp
-	PARENT_SCOPE
-)
+target_sources(ChokoEditor PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/surface.cpp
+	)
