--- a/editor/ext/CMakeLists.txt
+++ b/editor/ext/CMakeLists.txt
@@ -1,8 +1,4 @@
-set(DIR editor/ext)
-
-set(SOURCES
-	${SOURCES}
-	${DIR}/ui_ext.cpp
-	${DIR}/ui_ext_layout.cpp
-	PARENT_SCOPE
+target_sources(ChokoEditor PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/ui_ext.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/ui_ext_layout.cpp
 )
