--- a/editor/hooks/CMakeLists.txt
+++ b/editor/hooks/CMakeLists.txt
@@ -1,8 +1,4 @@
-set(DIR editor/hooks)
-
-set(SOURCES
-	${SOURCES}
-	${DIR}/callback.cpp
-	${DIR}/callback_args.cpp
-	PARENT_SCOPE
+target_sources(ChokoEditor PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/callback.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/callback_args.cpp
 )
