--- a/editor/res/CMakeLists.txt
+++ b/editor/res/CMakeLists.txt
@@ -1,8 +1,4 @@
-set(DIR editor/res)
-
-set(SOURCES
-	${SOURCES}
-	${DIR}/icons.cpp
-	${DIR}/images.cpp
-	PARENT_SCOPE
+target_sources(ChokoEditor PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/icons.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/images.cpp
 )
