--- a/editor/serial/CMakeLists.txt
+++ b/editor/serial/CMakeLists.txt
@@ -1,7 +1,5 @@
-set(DIR editor/serial)
-
-set(SOURCES
-	${SOURCES}
-	${DIR}/serializer.cpp
-	PARENT_SCOPE
+target_sources(ChokoEditor PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/serializer.cpp
 )
+
+add_subdirectory(config)
