--- a/editor/serial/config/CMakeLists.txt
+++ b/editor/serial/config/CMakeLists.txt
@@ -1,8 +1,4 @@
-set(DIR editor/serial/config)
-
-set(SOURCES
-	${SOURCES}
-	${DIR}/assets.cpp
-	${DIR}/components.cpp
-	PARENT_SCOPE
-)
+target_sources(ChokoEditor PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/assets.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/components.cpp
+	)
