--- a/editor/ui/windows/CMakeLists.txt
+++ b/editor/ui/windows/CMakeLists.txt
@@ -1,11 +1,11 @@
-set(DIR editor/ui/windows)
-
-set(SOURCES
-	${SOURCES}
-	${DIR}/ew_browser.cpp
-	${DIR}/ew_hierarchy.cpp
-	${DIR}/ew_inspector.cpp
-	${DIR}/ew_sceneview.cpp
-	${DIR}/ew_shadereditor.cpp
-	PARENT_SCOPE
+target_sources(ChokoEditor PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/ew_browser.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/ew_hierarchy.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/ew_inspector.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/ew_sceneview.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/ew_shadereditor.cpp
 )
+
+add_subdirectory(inspector)
+add_subdirectory(ops)
+add_subdirectory(sceneview)
