--- a/editor/ui/windows/inspector/status/CMakeLists.txt
+++ b/editor/ui/windows/inspector/status/CMakeLists.txt
@@ -1,7 +1,3 @@
-set(DIR editor/ui/windows/inspector/status)
-
-set(SOURCES
-	${SOURCES}
-	${DIR}/status_base.cpp
-	PARENT_SCOPE
-)
+target_sources(ChokoEditor PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/status_base.cpp
+	)
