--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -4,4 +4,12 @@ target_sources(ChokoEditor PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
 )
 
+add_subdirectory(asset)
+add_subdirectory(exporters)
+add_subdirectory(ext)
+add_subdirectory(hooks)
+add_subdirectory(res)
+add_subdirectory(scene)
 add_subdirectory(scripting)
+add_subdirectory(serial)
+add_subdirectory(ui)
