--- a/editor/asset/ext/CMakeLists.txt
+++ b/editor/asset/ext/CMakeLists.txt
@@ -1,7 +1,6 @@
-set(DIR editor/asset/ext)
-
-set(SOURCES
-	${SOURCES}
-	${DIR}/vshader_node.cpp
-	PARENT_SCOPE
+target_sources(ChokoEditor PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/vshader_node.cpp
 )
+
+add_subdirectory("vshader/inputs")
+add_subdirectory("vshader/outputs")
