--- a/editor/ui/windows/inspector/comp/CMakeLists.txt
+++ b/editor/ui/windows/inspector/comp/CMakeLists.txt
@@ -1,13 +1,9 @@
-set(DIR editor/ui/windows/inspector/comp)
-
-set(SOURCES
-	${SOURCES}
-	${DIR}/animator.cpp
-	${DIR}/camera.cpp
-	${DIR}/light.cpp
-	${DIR}/lightprobe.cpp
-	${DIR}/meshrenderer.cpp
-	${DIR}/rig.cpp
-	${DIR}/script.cpp
-	PARENT_SCOPE
-)
+target_sources(ChokoEditor PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}/animator.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/camera.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/light.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/lightprobe.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/meshrenderer.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/rig.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/script.cpp
+	)
