--- a/editor/asset/ext/CMakeLists.txt
+++ b/editor/asset/ext/CMakeLists.txt
@@ -2,5 +2,5 @@ target_sources(ChokoEditor PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/vshader_node.cpp
 )
 
-add_subdirectory("vshader/inputs")
-add_subdirectory("vshader/outputs")
+add_subdirectory(vshader/inputs)
+add_subdirectory(vshader/outputs)
