--- a/src/backend/rend/CMakeLists.txt
+++ b/src/backend/rend/CMakeLists.txt
@@ -4,4 +4,4 @@ target_sources(ChokoEngine PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/renderer_probes.cpp
 )
 
-add_subdirectory("GI")
+add_subdirectory(GI)
