--- a/src/scene/CMakeLists.txt
+++ b/src/scene/CMakeLists.txt
@@ -6,4 +6,4 @@ target_sources(ChokoEngine PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/transform.cpp
 )
 
-add_subdirectory("comp")
+add_subdirectory(comp)
